--- a/hwk1-task2-corals.ipynb
+++ b/hwk1-task2-corals.ipynb
@@ -72,7 +72,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "This dataset uses machine learning to explore the future of 7039 coral reef cells in the western Indian Ocean based on the influences of climate change, water quality, direct human-resource extraction, and variable selection process. \n",
+    "\n",
+    "Access Date: 10/8/24\n",
+    "\n",
+    "https://knb.ecoinformatics.org/view/doi%3A10.5063%2FF1K35S3H"
    ]
   },
   {
@@ -611,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
