working through task 2

--- a/hwk1-task2-corals.ipynb
+++ b/hwk1-task2-corals.ipynb
@@ -103,14 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "...\n",
-    "coral_div = ..."
+    "import pandas as pd\n",
+    "# Read in data\n",
+    "coral_div = pd.read_csv('https://knb.ecoinformatics.org/knb/d1/mn/v2/object/urn%3Auuid%3Ae7d12a5a-f1a9-4a3e-aaa5-5222f67e799d')\n",
+    "# note to self: to get this url, right click on the data download and then copy address link"
    ]
   },
   {
@@ -141,16 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 575 rows and 42 columns.\n"
+     ]
+    }
+   ],
    "source": [
     "# a\n",
     "\n",
-    "rows = ...\n",
-    "columns = ..."
+    "rows = coral_div.shape[0]\n",
+    "columns = coral_div.shape[1]\n",
+    "\n",
+    "print(\"There are\",rows, \"rows and\", columns, \"columns.\")\n",
+    "# The output shows us that there are 575 rows and 42 columns."
    ]
   },
   {
@@ -165,14 +178,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PU_ID', 'PU_Lat', 'PU_Lon', 'Number_of_genera', 'Country', 'Ecoregion',\n",
+       "       'Management', 'Habitat', 'Observer', 'Depth', 'Coralcover',\n",
+       "       'SSTRateofRise', 'PARmax', 'Calcite', 'Dis_oxygen', 'mean.waveNRJ',\n",
+       "       'Salinity_mean', 'andrello_reef_value', 'andrello_nutrients',\n",
+       "       'mean.npp', 'TT_market_hrs', 'TT_pop_hrs', 'cumDHW', 'SST_Kurtosis',\n",
+       "       'SST_Median', 'ChlorA_median', 'andrello_sediments', 'Current_vel_mean',\n",
+       "       'Diff_attenuation', 'Grav_NP', 'Grav_NC', 'PH', 'SST_bimodality',\n",
+       "       'SST_Skewness', 'ClimateStressModel', 'Netflow', 'Indegree',\n",
+       "       'Outdegree', 'Retention', 'min_yr', 'max_yr', 'no_replicates'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# b\n",
-    "coral_div_columns = ..."
+    "coral_div_columns = coral_div.columns\n",
+    "# The columns attribute shows us the name of all 42 columns in the dataframe."
    ]
   },
   {
@@ -187,14 +221,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PU_ID                    int64\n",
+      "PU_Lat                 float64\n",
+      "PU_Lon                 float64\n",
+      "Number_of_genera         int64\n",
+      "Country                 object\n",
+      "Ecoregion               object\n",
+      "Management              object\n",
+      "Habitat                 object\n",
+      "Observer                object\n",
+      "Depth                  float64\n",
+      "Coralcover               int64\n",
+      "SSTRateofRise          float64\n",
+      "PARmax                 float64\n",
+      "Calcite                float64\n",
+      "Dis_oxygen             float64\n",
+      "mean.waveNRJ           float64\n",
+      "Salinity_mean          float64\n",
+      "andrello_reef_value      int64\n",
+      "andrello_nutrients     float64\n",
+      "mean.npp               float64\n",
+      "TT_market_hrs          float64\n",
+      "TT_pop_hrs             float64\n",
+      "cumDHW                 float64\n",
+      "SST_Kurtosis           float64\n",
+      "SST_Median             float64\n",
+      "ChlorA_median          float64\n",
+      "andrello_sediments     float64\n",
+      "Current_vel_mean       float64\n",
+      "Diff_attenuation       float64\n",
+      "Grav_NP                float64\n",
+      "Grav_NC                float64\n",
+      "PH                     float64\n",
+      "SST_bimodality         float64\n",
+      "SST_Skewness           float64\n",
+      "ClimateStressModel     float64\n",
+      "Netflow                float64\n",
+      "Indegree               float64\n",
+      "Outdegree              float64\n",
+      "Retention              float64\n",
+      "min_yr                   int64\n",
+      "max_yr                   int64\n",
+      "no_replicates            int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# c\n",
-    "coral_div_types = ..."
+    "coral_div_types = coral_div.dtypes\n",
+    "# The dtypes attribubte shows us the data types of all 42 columns in the dataframe."
    ]
   },
   {
@@ -216,7 +301,7 @@
    "outputs": [],
    "source": [
     "# d\n",
-    "first_8_rows = ..."
+    "first_8_rows = "
    ]
   },
   {
