--- a/hwk1-task2-corals.ipynb
+++ b/hwk1-task2-corals.ipynb
@@ -1095,18 +1095,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "filtered_data = "
+    "# Selecting only columns PH, mean salinity, and depth\n",
+    "filtered_data = coral_div[[\"PH\",\"Salinity_mean\",\"Depth\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1114,11 +1115,106 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PH</th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>Depth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.2175</td>\n",
+       "      <td>35.167646</td>\n",
+       "      <td>11.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.2175</td>\n",
+       "      <td>35.167646</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.2175</td>\n",
+       "      <td>35.167646</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.2175</td>\n",
+       "      <td>35.167646</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>12.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>12.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>573</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>13.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>13.47</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>575 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Ellipsis"
+       "         PH  Salinity_mean  Depth\n",
+       "0    8.2175      35.167646  11.00\n",
+       "1    8.2175      35.167646   2.00\n",
+       "2    8.2175      35.167646   4.00\n",
+       "3    8.2175      35.167646   3.00\n",
+       "..      ...            ...    ...\n",
+       "571  8.2400      35.301208  12.00\n",
+       "572  8.2400      35.301208  12.60\n",
+       "573  8.2400      35.301208  13.00\n",
+       "574  8.2400      35.301208  13.47\n",
+       "\n",
+       "[575 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,29 +1237,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "sampling_2017 = ..."
+    "# Run the boolean series of max year from the whole data frame into the filtered data subset from the last question.\n",
+    "sampling_2017 = filtered_data[coral_div['max_yr'] == 2017]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PH</th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>Depth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>8.2150</td>\n",
+       "      <td>35.100085</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>8.2145</td>\n",
+       "      <td>35.144927</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>8.2150</td>\n",
+       "      <td>35.101086</td>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>8.2150</td>\n",
+       "      <td>35.101086</td>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559</th>\n",
+       "      <td>8.2120</td>\n",
+       "      <td>35.204185</td>\n",
+       "      <td>1.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>17.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>569</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>13.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>8.2400</td>\n",
+       "      <td>35.301208</td>\n",
+       "      <td>13.470000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Ellipsis"
+       "         PH  Salinity_mean      Depth\n",
+       "67   8.2150      35.100085  16.000000\n",
+       "68   8.2145      35.144927  10.000000\n",
+       "70   8.2150      35.101086  11.000000\n",
+       "71   8.2150      35.101086  11.000000\n",
+       "..      ...            ...        ...\n",
+       "559  8.2120      35.204185   1.500000\n",
+       "566  8.2400      35.301208  17.000000\n",
+       "569  8.2400      35.301208  13.833333\n",
+       "574  8.2400      35.301208  13.470000\n",
+       "\n",
+       "[35 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,29 +1380,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "subset = ..."
+    "# Used iloc to choose specific rows and columns.\n",
+    "subset = coral_div.iloc[95:101, [16,19,27]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>mean.npp</th>\n",
+       "      <th>Current_vel_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>35.201630</td>\n",
+       "      <td>1365.146729</td>\n",
+       "      <td>0.878417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>35.204185</td>\n",
+       "      <td>1117.635010</td>\n",
+       "      <td>0.839372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>35.234774</td>\n",
+       "      <td>1105.270142</td>\n",
+       "      <td>0.685955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>35.234774</td>\n",
+       "      <td>1105.270142</td>\n",
+       "      <td>0.685955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Ellipsis"
+       "     Salinity_mean     mean.npp  Current_vel_mean\n",
+       "95       35.201630  1365.146729          0.878417\n",
+       "96       35.204185  1117.635010          0.839372\n",
+       "97       35.234774  1105.270142          0.685955\n",
+       "98       35.234774  1105.270142          0.685955\n",
+       "99       35.250068  1082.196411               NaN\n",
+       "100      35.250068  1082.196411               NaN"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,10 +1499,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>mean.npp</th>\n",
+       "      <th>Current_vel_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Salinity_mean  mean.npp  Current_vel_mean\n",
+       "95           False     False             False\n",
+       "96           False     False             False\n",
+       "97           False     False             False\n",
+       "98           False     False             False\n",
+       "99           False     False              True\n",
+       "100          False     False              True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset.isna()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "This code goes through each element in the subset data frame and gives a False if the value is NA and True if the value is not NA. These results are presented in a dataframe."
    ]
   },
   {
@@ -1257,10 +1614,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salinity_mean       False\n",
+       "mean.npp            False\n",
+       "Current_vel_mean     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset.isna().any()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "This code outputs a Series telling us if there are any NA values in the whole column of the subset dataframe."
    ]
   },
   {
@@ -1279,30 +1661,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "outputs": [],
    "source": [
-    "subset_na = ..."
+    "subset_na = subset[subset['Current_vel_mean'].isna()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>mean.npp</th>\n",
+       "      <th>Current_vel_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Ellipsis"
+       "     Salinity_mean     mean.npp  Current_vel_mean\n",
+       "99       35.250068  1082.196411               NaN\n",
+       "100      35.250068  1082.196411               NaN"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
