add comments to both tasks

--- a/hwk1-task2-corals.ipynb
+++ b/hwk1-task2-corals.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "**UPDATE THIS LINK:**\n",
     "\n",
-    "[https://github.com/MEDS-eds-220/eds220-hwk-1]()"
+    "[https://github.com/egp4aq/eds220-hwk1]()"
    ]
   },
   {
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {
     "tags": []
    },
@@ -1582,12 +1582,13 @@
        "100          False     False              True"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Check if there are NA values in the subset\n",
     "subset.isna()"
    ]
   },
